stylesheet/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    font-family: 'Roboto', sans-serif;

    margin:0;

}

li {
    list-style: none;
    
}

.header {
    width: 100vw;
    background-color: salmon;
    display: flex;
    flex-direction: column;
    align-items: center;
    

}

.nav-bar {
    width:67vw;
    display: flex;
    justify-content: space-between;
    margin-top:10px;
    margin-bottom:80px;

}

.header-link {
    display: flex;
    gap:20px;

    margin:0;
    padding:0;
}
    
    
.hero {
    
    width:67vw;
    display:flex;

    margin-bottom: 80px;
    
}

.hero-left,
.hero-right {
    flex:1;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

.hero-text {
    line-height: 40px;
}

.header-link,
.hero-text {
    font-size: 18px;
    color: #FFFFFF;
}

.hero-title,
.hero-text,
.sign-up-button {
    margin-bottom: 15px;
}

.hero-title {
    font-size:48px;
    font-weight: 600;
    color: #F9FAF8;
}



.hero-left {
    padding-right: 25px;
}
.hero-right {
    display:flex;
    
    align-items: center;
    text-align:center;
    background-color: #FFFFFF;
    border-radius: 20px;
}

.info {
    display:flex;
    flex-direction: column;

    text-align: center;

    margin-bottom: 120px;
}

.info-title {
    font-size: 36px;
    font-weight: 800;
    color: salmon;

    margin-top: 60px;
    margin-bottom: 60px;
}

.cards {
    display: flex;
    justify-content: center;

    width: 67vw;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.card-image {
    width: 180px;
    height: 180px;
    
    
    border-radius: 10%;
}

.card-text {
    margin: 10px;
}

.quote {
    background-color: rgb(240, 240, 240);
    color:salmon;

    width:100vw;

    display: flex;
    flex-direction: column;
    align-items: center;

    padding-top: 120px;
    padding-bottom: 120px;
  
}

.quote-text,
.source {
    width:57vw;
}

.quote-text {
  

    font-size: 36px;
    font-weight: 50;
    font-style: italic;

    margin-bottom: 20px;
}

.source {
    text-align: right;
    font-weight: bold;
}

.sign-up {
    display: flex;
    height: 300px;
    justify-content: center;
    align-items: center;
}

.sign-up-box {
   
    display: flex;
    justify-content: center;
    align-items: center;

    width:67vw;
    height: 100px;
    background-color: salmon;
    color: #F9FAF8;

    border-radius: 10px;
    
}
.sign-up-box .sign-up-button {
    border: 1px solid #F9FAF8;
    margin:10px;
    margin-left: 70px;
}


.sign-up-button {
    
    width: 100px;
    height: 25px;
    background-color: #F9FAF8;
    color: salmon;
    border-radius: 5px;
    border:none;

    
}

.footer {
    display:flex;
    justify-content: center;
    align-items: center;
    width:100vw;
    background-color:salmon;
    color: #F9FAF8;
    text-align:center;
    height: 70px;
}

.for-phufah {
    width: 530px;
    height: auto;
    color: salmon;
    font-size: 48px;
}

